Fixed form errors and contrast warnings in Dropdown, Footer and Header

--- a/src/chi/components/toggle-switch/toggle-switch.scss
+++ b/src/chi/components/toggle-switch/toggle-switch.scss
@@ -41,7 +41,7 @@ input {
 
           &::after {
             background-image: none;
-            border: none;
+            border: 0;
             color: set-color(white);
             content: 'OFF';
             display: block;
